fix: center nav alignment

--- a/css/all.css
+++ b/css/all.css
@@ -149,8 +149,8 @@ body {
 
 /* header */
 header {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
   align-items: center;
   padding: 32px 312px;
 }
